# tree-sitter-elm

./: .gitattributes  .gitignore  .npmignore  .travis.yml  CMakeLists.txt  Cargo.toml  HOW_TO_RELEASE.md  Makefile  Package.swift  README.md  appveyor.yml  binding.gyp  flake.nix  go.mod  grammar.js  js.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: codeql-analysis.yml  fuzz.yml  main.yml  npm-publish.yml  publish.yml  test-full.yml  test-on-test-corpus.yml  test-windows.yml  test.yml  validate-lsp.yml
bindings/c/: tree-sitter-elm.h  tree-sitter-elm.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_elm/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterElmTests/: TreeSitterElmTests.swift
bindings/swift/TreeSitterGren/: gren.h
corpus/: field_access.txt
docs/js/: tree-sitter-elm.wasm
editors/: README.md
editors/helix/: README.md  languages.toml
editors/helix/runtime/queries/gren/: highlights.scm
editors/nvim/: README.md
editors/nvim/gren/: highlights.scm
examples/: test.elm
fuzz/: Makefile  README.md  fuzz_scanner.c
fuzz/seeds/: block_comment.elm  case.elm  invalid_utf8.elm  let.elm  line_comment.elm  multiline_string.elm
queries/: highlights.scm  locals.scm
script/: TEST_CORPUS_REPO  expected_fails.txt  known-failures-full.txt  parse-examples  parse-examples-full  parse-test-corpus  tree-sitter-config.json
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: annotations.txt  basic.txt  case.txt  case_incomplete.txt  comments.txt  complete.txt  imports.txt  incomplete.txt  let.txt  module.txt  statements.txt  string.txt  type.txt
test/highlight/: basic.elm  basic.gren
