[package]
name = "tree-sitter-gren"
description = "gren grammar for the tree-sitter parsing library"
authors = [
    "Harry Sarson <harry.sarson@hotmail.co.uk>",
    "Kolja Lampe <razzeee@gmail.com>"
]
homepage = "https://tree-sitter.github.io/tree-sitter/"
repository = "https://github.com/MaeBrooks/tree-sitter-gren"
keywords = ["gren", "tree", "sitter", "parsing", "incremental"]
categories = ["parser-implementations", "api-bindings", "text-editors", "parsing"]
edition = "2018"
license = "MIT"
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "LICENSE.md",
]

# Keep in sync with package.json
version = "5.7.0"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.10"

[build-dependencies]
cc = "1.0"
