[package]
name = "tree-sitter-elm"
description = "Elm grammar for tree-sitter"
version = "5.9.0"
authors = [
    "Harry Sarson <harry.sarson@hotmail.co.uk>",
    "Kolja Lampe <razzeee@gmail.com>"

]
readme = "README.md"
repository = "https://github.com/elm-tooling/tree-sitter-elm"
keywords = ["incremental", "parsing", "tree-sitter", "elm"]
categories = ["parser-implementations", "parsing", "text-editors"]
edition = "2021"
license = "MIT"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE.md",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
