[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-elm"
description = "Elm grammar for tree-sitter"
version = "5.9.0"
keywords = ["incremental", "parsing", "tree-sitter", "elm"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Kolja Lampe", email = "razzeee@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/elm-tooling/tree-sitter-elm"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
